STYLE (login): Add extra width to enterprise buttons to prevent content overflow

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1130,6 +1130,6 @@ input[type="range"] {
     background: -webkit-gradient(linear, left top, left bottom, from(#6b6b6b), to(#555));
     box-shadow: 0px 1px 3px rgba(85, 85, 85, 0.5), inset 0px 0px 1px rgba(255, 255, 255, 0.7);
     color: #ffffff;
-    width: 160px;
+    width: 190px;
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.9), 0px 1px 0px rgba(255, 255, 255, 1);
 }
